--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,7 @@ Please consider reviewing the applications of:
     $scope.newuser = {};
     
     // Here is where you update your Firebase URL. 
-    var theFirebaseURL = "https://is429.firebaseio.com";
+    var theFirebaseURL = "https://mxchua.firebaseio.com/";
     
     var ref = new Firebase(theFirebaseURL);
     $scope.users = $firebase(ref.child("feedback")).$asArray(); 
@@ -259,15 +259,15 @@ Please consider reviewing the applications of:
   
   
   <!-- Google Tracking code. Change the UA-XXXXXXX key to be yours -->
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  
-    ga('create', 'UA-32403946-2', 'auto');
-    ga('send', 'pageview');
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  </script>
+  ga('create', 'UA-59571948-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
