--- a/patternsAnalytics.html
+++ b/patternsAnalytics.html
@@ -35,6 +35,9 @@
 <body ng-controller="userController" >    
     <div class="container">
                 
+        <div>
+            <button class="btn btn-danger" analytics-on="click" analytics-event="Download">Click me to analyze</button>
+        </div>
         <h3> Counters and Timers and Queues </h3>
         Demonstraton of how to eempliment couters, timers, and task queues on Firebase. <br><br>
 
@@ -467,7 +470,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-59571948-1', 'auto');
-  ga('send', 'pageview');
+  //ga('send', 'pageview');
 
 </script>
 </body>
