--- a/patternsAnalytics.html
+++ b/patternsAnalytics.html
@@ -35,9 +35,9 @@
 <body ng-controller="userController" >    
     <div class="container">
                 
-        <div>
-            <button class="btn btn-danger" analytics-on="click" analytics-event="Download">Click me to analyze</button>
-        </div>
+        <!--<div>-->
+        <!--    <button class="btn btn-danger" analytics-on="click" analytics-event="Download">Click me to analyze</button>-->
+        <!--</div>-->
         <h3> Counters and Timers and Queues </h3>
         Demonstraton of how to eempliment couters, timers, and task queues on Firebase. <br><br>
 
