--- a/patternsAnalytics.html
+++ b/patternsAnalytics.html
@@ -35,9 +35,9 @@
 <body ng-controller="userController" >    
     <div class="container">
                 
-        <div>
-            <button class="btn btn-danger" analytics-on="click" analytics-event="Download">Click me to analyze</button>
-        </div>
+        <!--<div>-->
+        <!--    <button class="btn btn-danger" analytics-on="click" analytics-event="Download">Click me to analyze</button>-->
+        <!--</div>-->
         <h3> Counters and Timers and Queues </h3>
         Demonstraton of how to eempliment couters, timers, and task queues on Firebase. <br><br>
 
@@ -225,7 +225,6 @@
 </div> <!-- container -->
 <script>
   var myApp = angular.module("myApp", ["firebase","chart.js", "angulartics", "angulartics.google.analytics"]);
-  //var myApp = angular.module("myApp", ["firebase","chart.js", "angulartics"]);
   myApp.controller('userController', ['$scope', '$firebase',
     function($scope, $firebase) {
     $scope.newuser = {};
@@ -469,10 +468,8 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-59571948-1', 'auto');
   //ga('send', 'pageview');
-
 </script>
 </body>
 </html>
